# sods-concept

./: .gitignore  Dockerfile  EVALUASI_INDEPENDEN.md  GENESIS.md  GENESIS_EN.md  LICENSE-MIT  README.md  README_EN.md  ROADMAP_STATUS.md  WHITEPAPER.md  WHITEPAPER_EN.md  arsitektur_sods.html  index.html  prototype_sods.py  pyproject.toml
.github/workflows/: ci.yml  test.yml
benchmarks/: bench_add.py
examples/: demo_add.py  demo_json.py
src/sods/: __init__.py  cli.py  dummy_target.py  profile.py  sandbox.py  specializer.py  verifier.py
tests/: test_sods.py
